<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <include layout="@layout/titlebar_verbal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question1"
                    style="@style/TextStyle"
                    android:text="@string/verbal_question1" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/Q1_opt1"
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques1_opt1" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques1_opt2" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques1_opt3" />

                    <RadioButton

                        style="@style/RadioButton"
                        android:text="@string/verbal_ques1_opt4" />

                </RadioGroup>


            </LinearLayout>
            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question2"
                    style="@style/TextStyle"
                    android:text="@string/verbal_question2" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques2_opt1" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques2_opt2" />

                    <RadioButton
                        android:id="@+id/Q2_opt3"
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques2_opt3" />

                    <RadioButton

                        style="@style/RadioButton"
                        android:text="@string/verbal_ques2_opt4" />


                </RadioGroup>


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question3"
                    style="@style/TextStyle"
                    android:text="@string/verbal_question3" />

                <RadioGroup style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/Q3_opt1"
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques3_opt1" />

                    <RadioButton

                        style="@style/RadioButton"
                        android:text="@string/verbal_ques3_opt2" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques3_opt3" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/verbal_ques3_opt4" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
        <include layout="@layout/submit_score"/>
    </LinearLayout>
</ScrollView>
</layout>