<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout ="@layout/titlebar_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question1"
                    style="@style/TextStyle"
                    android:text="@string/number_question1" />

                <CheckBox
                    android:id="@+id/Q1_opt1"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques1_opt1" />

                <CheckBox
                    android:id="@+id/Q1_opt2"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques1_opt2" />

                <CheckBox
                    android:id="@+id/Q1_opt3"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques1_opt3" />

                <CheckBox
                    android:id="@+id/Q1_opt4"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques1_opt4" />


            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question2"
                    style="@style/TextStyle"
                    android:text="@string/number_question2"

                    />

                <CheckBox
                    android:id="@+id/Q2_opt1"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques2_opt1" />

                <CheckBox
                    android:id="@+id/Q2_opt2"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques2_opt2" />

                <CheckBox
                    android:id="@+id/Q2_opt3"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques2_opt3" />

                <CheckBox
                    android:id="@+id/Q2_opt4"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques2_opt4" />

            </LinearLayout>

            <LinearLayout style="@style/questionBox">

                <TextView
                    android:id="@+id/question3"
                    style="@style/TextStyle"
                    android:text="@string/number_question3" />

                <CheckBox
                    android:id="@+id/Q3_opt1"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques3_opt1" />

                <CheckBox
                    android:id="@+id/Q3_opt2"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques3_opt2" />

                <CheckBox
                    android:id="@+id/Q3_opt3"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques3_opt3" />

                <CheckBox
                    android:id="@+id/Q3_opt4"
                    style="@style/CheckBoxStyle"
                    android:text="@string/number_ques3_opt4" />

            </LinearLayout>

        </LinearLayout>
        <include layout="@layout/submit_score"/>
    </LinearLayout>
</ScrollView>
</layout>
